--- a/test/dummy/app/views/home/index.html.erb
+++ b/test/dummy/app/views/home/index.html.erb
@@ -20,4 +20,16 @@
 <%- if @asd_post %>
   <p>asd_post</p>
   <%= @asd_post.title %>
+  <br/>
+  <br/>
+<%- end %>
+<%- if @popular_posts %>
+  <p>popular_posts</p>
+  <%= @popular_posts.size %>
+  <br/>
+  <br/>
+<%- end %>
+<%- if @titled_posts %>
+  <p>titled_posts</p>
+  <%= @titled_posts.size %>
 <%- end %>
